GUI fixes for example right alignment in editor window

--- a/Stylefiles/Truss.css
+++ b/Stylefiles/Truss.css
@@ -11,7 +11,7 @@ div {
 	color:black;
 }
 
-.inputcss {
+.inputcss, #fileList, .filename {
 	background-color: #ffdab9;
 	border: 1px solid grey;
 	border-radius: 2px;
@@ -27,7 +27,7 @@ option {
 }
 
 /* button color */
-.ogbutton, .tabsectionbuttons, div.tab button, .trussButton, .simpleButton {
+.ogbutton, .tabsectionbuttons, div.tab button, .trussButton, .simpleButton, .textbox {
 	background-color: #cdaf95;
 	color: black;
     border: none;
@@ -36,7 +36,7 @@ option {
     transition: 0.3s;
 }
 
-.trussButton:hover, div.tab button:hover, .simpleButton:hover {
+.trussButton:hover, div.tab button:hover, .simpleButton:hover, .selectedfilename {
 	background-color: #eecbad;
 }
 
@@ -66,7 +66,7 @@ option {
 		font-family: Arial;
 		margin: 0px 0px;
 	}
-	
+
 .xyvaluepair {
 	display:inline-block;
 	width:70px;
@@ -153,7 +153,7 @@ option {
 .sectionbase {
 	border-radius: 0px 0px 4px 4px;
 	/* background-color: #99C68E; */
-	padding: 5px 10px 5px 15px;
+	padding: 5px 10px 5px 10px;
 	margin: 0px 10px 10px 10px;
 	position: relative;
 	font-family: Arial;
@@ -253,32 +253,25 @@ option {
 
 .textbox {
 	padding: 5px;
-	background-color: white;
-	color: black;
 	font-family: Arial;
 	font-size: 16px;
 }
 
 #fileList {
 	padding: 5px;
-	background-color: white;
-	color: black;
 	font-family: Arial;
 	font-size: 16px;
 }
 
 .filename {
-	background-color: white;
-	color: black;
 	font-family: Arial;
 	font-size: 16px;
+	border: 0px;
+    cursor: pointer;
 }
 
 .selectedfilename {
-	background-color: blue;
-	color: white;
-	font-family: Arial;
-	font-size: 16px;
+    cursor: pointer;
 }
 
 
